# home-library-tracker

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  docker-compose.yml  migrate_remove_x_books.py  pyproject.toml
.github/workflows/: deploy.yml
home_library/: __init__.py  grouping.py  ocr.py  parsing.py
server/: app.py  config.py  database.py  lookup.py  models.py  schemas.py  worker.py
server/routers/: books.py  bookshelves.py  scans.py
server/static/: index.html
