[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-library"
version = "0.1.0"
description = "Detect and identify books on shelves using PaddleOCR"
requires-python = ">=3.8"
dependencies = [
    "paddleocr>=2.7,<3",
    "paddlepaddle>=2.5",
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.5",
]

[tool.setuptools.packages.find]
include = ["home_library*", "server*"]

[project.scripts]
home-library-server = "server.app:main"
